Setting JDK11 profiles content as base