@@ -30,6 +30,7 @@
     <checkstyle.skip>false</checkstyle.skip>
     <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1]
       -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
+    <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
     <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.modular}</server.jvm.args>
     <sortpom.skip>false</sortpom.skip>
   </properties>
@@ -279,24 +280,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>j9</id>
-      <activation>
-        <jdk>[1.9,11)</jdk>
-      </activation>
-      <properties>
-        <jvm.args.modular>--add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</jvm.args.modular>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk11</id>
-      <activation>
-        <jdk>[11,)</jdk>
-      </activation>
-      <properties>
-        <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
-      </properties>
     </profile>
   </profiles>
 </project>
