@@ -29,6 +29,7 @@
     <server.jvm.args>
       ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.modular}
     </server.jvm.args>
+    <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
   </properties>
 
   <build>
@@ -461,28 +462,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>j9</id>
-      <activation>
-        <jdk>[1.9,11)</jdk>
-      </activation>
-      <properties>
-        <jvm.args.modular>
-          --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
-          --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
-          --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-        </jvm.args.modular>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk11</id>
-      <activation>
-        <jdk>[11,)</jdk>
-      </activation>
-      <properties>
-        <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
-      </properties>
     </profile>
   </profiles>
 </project>
