@@ -25,6 +25,14 @@
     <description>Narayana: ArjunaJTS idl idlj</description>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.narayana.jts</groupId>
+            <artifactId>idlj-idl-openjdk</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <resources>
             <resource>
@@ -40,191 +48,56 @@
                 <filtering>false</filtering>
             </resource>
         </resources>
-<!--
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>copy-dependencies</id>
+                        <phase>initialize</phase>
                         <goals>
-                            <goal>test-jar</goal>
+                            <goal>unpack</goal>
                         </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.jboss.narayana.jts</groupId>
+                                    <artifactId>idlj-idl-openjdk</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>test-jar</type>
+                                    <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.jboss.narayana.jts</groupId>
+                                    <artifactId>idlj-idl-openjdk</artifactId>
+                                    <version>${project.version}</version>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>org.jboss.narayana.jts:idlj-idl</include>
+                                    <include>org.jboss.narayana.jts:idlj-idl-openjdk</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
--->
     </build>
-    <profiles>
-        <profile>
-            <id>j9</id>
-            <activation>
-                <jdk>[1.9, 11)</jdk>
-            </activation>
-            <properties>
-                <jvm.args.modular>--add-modules java.corba</jvm.args.modular>
-            </properties>
-            <build>
-                <plugins>
-
-                    <plugin>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-
-                            <execution>
-                                <id>copy-dependencies</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>unpack</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.jboss.narayana.jts</groupId>
-                                            <artifactId>idlj-idl-jdk9</artifactId>
-                                            <version>${project.version}</version>
-                                            <type>test-jar</type>
-                                            <outputDirectory>${project.build.directory}/generated-test-resources/META-INF/versions/9</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.jboss.narayana.jts</groupId>
-                                            <artifactId>idlj-idl-jdk9</artifactId>
-                                            <version>${project.version}</version>
-                                            <outputDirectory>${project.build.directory}/generated-resources/META-INF/versions/9</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-compile</id>
-                                <goals>
-                                    <goal>compile</goal>
-                                </goals>
-                                <configuration combine.self="override">
-                                    <compilerArgs>
-                                        <arg>--add-modules</arg>
-                                        <arg>java.corba</arg>
-                                        <arg>--add-exports</arg>
-                                        <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
-                                    </compilerArgs>
-                                    <excludes>
-                                        <exclude>**/jacorb/**</exclude>
-                                        <exclude>**/ibmorb/**</exclude>
-                                    </excludes>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>default-testCompile</id>
-                                <goals>
-                                    <goal>testCompile</goal>
-                                </goals>
-                                <configuration combine.self="override">
-                                    <compilerArgs>
-                                        <arg>--add-modules</arg>
-                                        <arg>java.corba</arg>
-                                    </compilerArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-test</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration combine.self="override">
-                                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                                    <systemProperties combine.children="append" />
-                                    <argLine>--add-modules java.corba</argLine>
-                                    <systemPropertyVariables
-                                            combine.children="append">
-                                        <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                                        <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                                        <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                                    </systemPropertyVariables>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-	<profile>
-            <id>jdk11</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.jboss.narayana.jts</groupId>
-                    <artifactId>idlj-idl-openjdk</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-            </dependencies>
-            <build>
-              <plugins>
-                <plugin>
-                  <artifactId>maven-dependency-plugin</artifactId>
-                  <executions>
-                    <execution>
-                      <id>copy-dependencies</id>
-                      <phase>initialize</phase>
-                      <goals>
-                        <goal>unpack</goal>
-                      </goals>
-                      <configuration>
-                        <artifactItems>
-                          <artifactItem>
-                            <groupId>org.jboss.narayana.jts</groupId>
-                            <artifactId>idlj-idl-openjdk</artifactId>
-                            <version>${project.version}</version>
-                            <type>test-jar</type>
-                            <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
-                          </artifactItem>
-                          <artifactItem>
-                            <groupId>org.jboss.narayana.jts</groupId>
-                            <artifactId>idlj-idl-openjdk</artifactId>
-                            <version>${project.version}</version>
-                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
-                          </artifactItem>
-                        </artifactItems>
-                      </configuration>
-                    </execution>
-                  </executions>
-                </plugin>
-                <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-shade-plugin</artifactId>
-                  <executions>
-                    <execution>
-                      <phase>package</phase>
-                      <goals>
-                        <goal>shade</goal>
-                      </goals>
-                      <configuration>
-                        <artifactSet>
-                          <includes>
-                            <include>org.jboss.narayana.jts:idlj-idl</include>
-                            <include>org.jboss.narayana.jts:idlj-idl-openjdk</include>
-                          </includes>
-                        </artifactSet>
-                      </configuration>
-                    </execution>
-                  </executions>
-                </plugin>
-              </plugins>
-            </build>
-	</profile>
-    </profiles>
 </project>
