@@ -191,119 +191,6 @@
       </dependency>
   </dependencies>
   <profiles>
-
-    <profile>
-      <id>not-j9</id>
-      <activation>
-        <jdk>[1.7,1.9)</jdk>
-      </activation>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <!-- do the other profiles generate an idlj-idl-tests artifact -->
-          <artifactId>idlj-idl-tests</artifactId>
-          <version>${project.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>j9</id>
-      <activation>
-        <jdk>[1.9, 11)</jdk>
-      </activation>
-
-      <properties>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>${java.corba.patch.name}</artifactId>
-          <version>${project.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl-tests</artifactId>
-          <version>${project.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <showDeprecation>false</showDeprecation>
-              <compilerArgs>
-                <arg>--add-modules</arg>
-                <arg>java.base</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy-dependencies</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.jboss.narayana.jts</groupId>
-                      <artifactId>${java.corba.patch.name}</artifactId>
-                      <version>${project.version}</version>
-                      <type>${project.packaging}</type>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>org.jboss.spec.javax.transaction</groupId>
-                      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-                      <version>${version.org.jboss.spec.javax.transaction}</version>
-                      <type>jar</type>
-                      <outputDirectory>${project.build.directory}/upgrademodulepath</outputDirectory>
-                    </artifactItem>
-                  </artifactItems>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-               <executions>
-                 <execution>
-                   <id>default-test</id>
-                   <phase>test</phase>
-                   <goals>
-                     <goal>test</goal>
-                   </goals> 
-                   <configuration>
-                     <useManifestOnlyJar>false</useManifestOnlyJar>
-                     <classpathDependencyExcludes>
-                       <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                       <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
-                       <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-                       <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                     </classpathDependencyExcludes>
-                   </configuration>
-                 </execution>
-               </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
     <profile>
         <id>release</id>
         <build>
