@@ -35,6 +35,9 @@
             ${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args} ${jvm.args.debug} ${jvm.args.modular}
         </server.jvm.args>
         <sortpom.skip>true</sortpom.skip>
+        <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
+        <version.jaxb>2.3.0</version.jaxb>
+        <version.jaxws-ri>2.3.0</version.jaxws-ri>
     </properties>
     <build>
         <plugins>
@@ -172,7 +175,19 @@
         				</lifecycleMappingMetadata>
         			</configuration>
         		</plugin>
-        	</plugins>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <excludes>
+                            <!--
+                                This test is disabled due to the JVM crash.
+                                And it is known JDK issue https://bugs.openjdk.java.net/browse/JDK-8210457
+                            -->
+                            <exclude>**/InboundCrashRecoveryTests.java</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+            </plugins>
         </pluginManagement>
     </build>
     <dependencies>
@@ -299,102 +314,34 @@
             <artifactId>jboss-transaction-spi</artifactId>
             <version>${version.org.jboss.jboss-transaction-spi}</version>
             <scope>provided</scope>
+        </dependency><dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${version.jaxb}</version>
+        <scope>provided</scope>
+    </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${version.jaxb}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${version.jaxb}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-ri</artifactId>
+            <version>${version.jaxws-ri}</version>
+            <type>pom</type>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
 	<profiles>
-        <profile>
-            <id>j9</id>
-            <activation>
-                <jdk>[1.9,11)</jdk>
-            </activation>
-            <properties>
-                <maven.compiler.source>1.9</maven.compiler.source>
-                <maven.compiler.target>1.9</maven.compiler.target>
-                <jvm.args.modular>--add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</jvm.args.modular>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-compile</id>
-                                <configuration>
-                                    <compilerArgs>
-                                        <arg>--add-modules</arg>
-                                        <arg>java.xml.ws</arg>
-                                    </compilerArgs>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>default-testCompile</id>
-                                <configuration>
-                                    <compilerArgs>
-                                        <arg>--add-modules</arg>
-                                        <arg>java.xml.ws</arg>
-                                    </compilerArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-	  <id>jdk11</id>
-          <activation>
-             <jdk>[11,)</jdk>
-          </activation>
-          <properties>
-             <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
-	     <version.jaxb>2.3.0</version.jaxb>
-	  </properties>
-	  <dependencies>
-		  <dependency>
-			  <groupId>javax.xml.bind</groupId>
-			  <artifactId>jaxb-api</artifactId>
-			  <version>${version.jaxb}</version>
-                          <scope>provided</scope>
-		  </dependency>
-		  <dependency>
-			  <groupId>com.sun.xml.bind</groupId>
-			  <artifactId>jaxb-core</artifactId>
-			  <version>${version.jaxb}</version>
-                          <scope>provided</scope>
-		  </dependency>
-		  <dependency>
-			  <groupId>com.sun.xml.bind</groupId>
-			  <artifactId>jaxb-impl</artifactId>
-			  <version>${version.jaxb}</version>
-                          <scope>provided</scope>
-		  </dependency>
-		  <dependency>
-			  <groupId>com.sun.xml.ws</groupId>
-			  <artifactId>jaxws-ri</artifactId>
-			  <version>${version.jaxws-ri}</version>
-			  <type>pom</type>
-                          <scope>provided</scope>
-		  </dependency>
-	  </dependencies>
-	  <build>
-		  <plugins>
-			  <plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<!--
-						    This test is disabled due to the JVM crash.
-						    And it is known JDK issue https://bugs.openjdk.java.net/browse/JDK-8210457
-						-->
-						<exclude>**/InboundCrashRecoveryTests.java</exclude>
-					</excludes>
-				</configuration>
-			  </plugin>
-		  </plugins>
-	  </build>
-      </profile>
 		<profile>
 			<id>arq</id>
 			<activation>
